fixed horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 body{ overflow-x: hidden;
   font-family: "Poppins", sans-serif;
   font-style: normal;
@@ -54,7 +56,7 @@ transition: all 0.4s ease-in-out;
 header h3{ position: absolute;
 top: 0;
 left: 0;
-padding:40px 350px 0px 60px;
+padding:40px 50px 0px 60px;
 font-size: 12px;} 
 
 .grid{ 
